backend of login reqister and logout

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 8000
 MONGO_DB_URI = mongodb+srv://abhisatish:abhisatish001@cluster0.l8aqf.mongodb.net/PharmaMate
+JWT_SECRET = a2NdWkR8xei6hI+WRGeAfokWwARnSrzPbcmh2p2R1D4=
+NODE_ENV = development
 #password = abhisatish001
