--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "nodemon": "^3.1.4",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "toastify": "^2.0.1"
   },
   "name": "pharmamate",
   "description": "npm run dev for sever start\r This is medical related website",
