--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.4",
     "react-router-dom": "^6.27.0",
     "toastify": "^2.0.1"
